[gd_scene load_steps=15 format=3 uid="uid://c1elmaktdrici"]

[ext_resource type="Script" path="res://Scenes/LevelSelect/Scrpt_LevelSelect.gd" id="1_rnmq5"]
[ext_resource type="Texture2D" uid="uid://e4ymxoybvfdl" path="res://Assets/IMG_Pantallas/PantallaPrincipal.jpg" id="2_qw3fm"]
[ext_resource type="FontFile" uid="uid://bpmafq01liqvp" path="res://Assets/Fonts/nulshock bd.otf" id="3_fmded"]
[ext_resource type="FontFile" uid="uid://c8hbdvi0h5ga5" path="res://Assets/Fonts/BAUHS93.ttf" id="4_h5rqc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7l6s"]
bg_color = Color(0, 0.470588, 0.470588, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.392157, 0.392157, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3whs"]
bg_color = Color(0, 0.392157, 0.392157, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.313726, 0.313726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3pka"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3kk66"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_le50y"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.705882)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0980392, 0.0980392, 0.0980392, 0.705882)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ieyyq"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.705882)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0980392, 0.0980392, 0.0980392, 0.705882)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcnvj"]
bg_color = Color(0, 0.470588, 0.470588, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.392157, 0.392157, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jmqh"]
bg_color = Color(0, 0.392157, 0.392157, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.313726, 0.313726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwqvt"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xye8m"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_rnmq5")

[node name="ReqDuelBG" type="TextureRect" parent="."]
modulate = Color(0.393086, 0.393086, 0.393085, 1)
z_index = -1
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_qw3fm")

[node name="Btn1Metro" type="Button" parent="."]
z_index = 1
offset_left = 736.0
offset_top = 464.0
offset_right = 1184.0
offset_bottom = 560.0
theme_override_fonts/font = ExtResource("3_fmded")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_e7l6s")
theme_override_styles/hover = SubResource("StyleBoxFlat_u3whs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d3pka")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3kk66")
text = "Proyecto 1: Metro"

[node name="Btn2TBA" type="Button" parent="."]
z_index = 1
offset_left = 736.0
offset_top = 592.0
offset_right = 1184.0
offset_bottom = 688.0
theme_override_colors/font_pressed_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = ExtResource("3_fmded")
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = SubResource("StyleBoxFlat_le50y")
disabled = true
text = "Proyecto 2: TBA"

[node name="Btn3TBA" type="Button" parent="."]
z_index = 1
offset_left = 736.0
offset_top = 720.0
offset_right = 1184.0
offset_bottom = 816.0
theme_override_colors/font_pressed_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = ExtResource("3_fmded")
theme_override_font_sizes/font_size = 32
theme_override_styles/disabled = SubResource("StyleBoxFlat_ieyyq")
disabled = true
text = "Proyecto 3: TBA"

[node name="GameLogo" type="Label" parent="."]
z_index = 1
offset_left = 576.0
offset_top = 128.0
offset_right = 1344.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("4_h5rqc")
theme_override_font_sizes/font_size = 160
text = "REQ DUEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnVolver" type="Button" parent="."]
offset_left = 736.0
offset_top = 848.0
offset_right = 1184.0
offset_bottom = 944.0
theme_override_fonts/font = ExtResource("3_fmded")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_mcnvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_6jmqh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pwqvt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xye8m")
text = "Volver"

[connection signal="pressed" from="Btn1Metro" to="." method="_on_btn_1_metro_pressed"]
[connection signal="pressed" from="Btn2TBA" to="." method="_on_btn_2tba_pressed"]
[connection signal="pressed" from="Btn3TBA" to="." method="_on_btn_3tba_pressed"]
[connection signal="pressed" from="BtnVolver" to="." method="_on_btn_volver_pressed"]
[connection signal="pressed" from="BtnVolver" to="." method="_on_volver_pressed"]
